--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,83 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!--20220209:以下２行を変更-->
+    <%#= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to "Bookers", root_path, class: "navbar-brand" %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                  aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <!--ログインしている場合ログイン者のユーザーページに遷移-->
+                  <%= link_to user_path(current_user.id), class: "nav-link text-light" do %>
+                    <i class="fas fa-home"></i><span>Home</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to users_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-users"></i><span>Users</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to books_path, class: "nav-link text-light" do  %>
+                    <i class="fas fa-book-open"></i><span>Books</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
+                    <i class="fas fa-sign-out-alt"></i><span>Log out</span>
+                  <% end %>
+                </li>
+              <% else %>
+                <li>
+                  <!--ログインしていない場合ルートパスに遷移-->
+                  <%= link_to root_path ,class: "nav-link text-light" do %>
+                    <i class="fas fa-home"></i><span>Home</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to about_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-link"></i><span>About</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_registration_path, class:"nav-link text-light" do %>
+                    <i class="fas fa-user-plus"></i><span>Sign up</span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_session_path, class: "nav-link text-light" do %>
+                    <i class="fas fa-sign-in-alt"></i><spn>Log in</spn>
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
