--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!--<h1>Books#edit</h1>-->
+<!--<p>Find me in app/views/books/edit.html.erb</p>-->
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book, url: book_path(@book), method: :patch, local: true do |f| %>
+        <div class="form-groupe mb-3">
+          <label for="title">Title</label><br>
+          <%= f.text_field :title, id: "title", class: "form-control"%>
+        </div>
+        <div class="form-groupe mb-3">
+          <label for="body">Opinion</label><br>
+          <%= f.text_area :body, id: "title", class: "form-control" %>
+        </div>
+        <%= f.submit "Update Book", class: "btn btn-success mb-3" %>
+      <% end %>
+
+      <%= link_to "show", book_path(@book) %>
+      <%="|" %>
+      <%= link_to "back", books_path %>
+    </div>
+  </div>
+</div>
