--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<!--<h1>Users#index</h1>-->
+<!--<p>Find me in app/views/users/index.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <!--画面左側-->
+    <div class="col-md-3">
+
+      <%= render 'books/user_info', user: @user %>
+      <%= render 'books/new_book', book: @book %>
+
+    </div>
+
+    <!--画面右側-->
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspn="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= image_tag user.get_profile_image(50,50) %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to "show", user_path(user) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
