--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<!--<h1>Users#show</h1>-->
+<!--<p>Find me in app/views/users/show.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <!--画面左側-->
+    <div class="col-md-3">
+
+      <%= render 'books/user_info', user: @user %>
+      <%= render 'books/new_book', book: @book %>
+
+    </div>
+
+    <!--画面右側-->
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspn="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td><%= image_tag book.user.get_profile_image(50,50) %></td>
+              <td><%=link_to book.title, book_path(book) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
