--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,20 @@
-<!--<h1>Books#edit</h1>-->
-<!--<p>Find me in app/views/books/edit.html.erb</p>-->
-
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h1>Editing Book</h1>
+
+      <!--バリデーション(エラーメッセージ)-->
+      <% if @book.errors.any? %>
+        <div class="text-danger">
+          <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
       <%= form_with model: @book, url: book_path(@book), method: :patch, local: true do |f| %>
         <div class="form-groupe mb-3">
           <label for="title">Title</label><br>
@@ -17,9 +27,9 @@
         <%= f.submit "Update Book", class: "btn btn-success mb-3" %>
       <% end %>
 
-      <%= link_to "show", book_path(@book) %>
+      <%= link_to "Show", book_path(@book) %>
       <%="|" %>
-      <%= link_to "back", books_path %>
+      <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
