--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,21 @@
-<!--<h1>Books#index</h1>-->
-<!--<p>Find me in app/views/books/index.html.erb</p>-->
-
 <div class="container px-5 px-sm-0">
+  <!--バリデーション(エラーメッセージ)-->
+  <% if @book.errors.any? %>
+    <div class="text-danger">
+      <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="row">
     <!--画面左側-->
     <div class="col-md-3">
 
-      <%= render 'user_info', user: @user %>
+      <%= render 'user_info', user: current_user %>
       <%= render 'new_book', book: @book %>
 
     </div>
@@ -26,7 +35,7 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= image_tag book.user.get_profile_image(50,50) %></td>
+              <td><%= link_to image_tag(book.user.get_profile_image(50,50)), user_path(book.user) %></td>
               <td><%= link_to book.title, book_path(book) %></td>
               <td><%= book.body %></td>
             </tr>
