--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,3 @@
-<!--<h1>Books#show</h1>-->
-<!--<p>Find me in app/views/books/show.html.erb</p>-->
-
 <div class="container px-5 px-sm-0">
   <div class="row">
     <!--画面左側-->
@@ -28,7 +25,7 @@
             <td><%= @book_detail.body %></td>
             <% if @user == current_user %>
               <td><%= link_to "Edit" ,edit_book_path(@book_detail), class:"btn btn-sm btn-success" %></td>
-              <td><%= link_to "Destroy" ,book_path(@book_detail), method: :delete, class:"btn btn-sm btn-danger" %></td>
+              <td><%= link_to "Destroy" ,book_path(@book_detail), method: :delete, data:{confirm: "本当に消しますか？"}, class:"btn btn-sm btn-danger" %></td>
             <% end %>
           </tr>
         </tbody>
