--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,10 +2,10 @@
   <div class="Row">
     <div clss="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <h1>
-        Welcom to<i class="fa-solid fa-book"></i><strong>Bookers!!</strong>
+        Welcom to<i class="fas fa-book"></i><strong>Bookers!!</strong>
       </h1>
       <p>
-        In<i class="fa-solid fa-book"></i><strong>Bookers</strong>,
+        In<i class="fas fa-book"></i><strong>Bookers</strong>,
       </p>
       <p>
         you can share and exchange your opinions,inpressions,and emotions
