--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,36 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+
+      <!--バリデーション(エラーメッセージ)-->
+      <% if @user.errors.any? %>
+        <div class="text-danger">
+          <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <%= form_with model: @user, local: true do |f| %>
+        <div class="form-groupe mb-3">
+          <label for="name">Name</label><br>
+          <%= f.text_field :name, id: "name", class: "form-control" %>
+        </div>
+        <div class="form=groupe mb-3">
+          <label for="profile_image">Image</label><br>
+          <%= f.file_field :profile_image, id: "profile_image", placeholder: "プロフィール画像", accept: "image/*" %>
+        </div>
+        <div class="form-groupe mb-3">
+          <label for="introduction">Introduction</label><br>
+          <%= f.text_area :introduction, id: "introduction", class: "form-control" %>
+        </div>
+        <%= f.submit "Update User", class: "btn btn-secondary mb-3" %>
+      <% end %>
+    </div>
+  </div>
+</div>
+
