--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,9 @@
-<!--<h1>Users#index</h1>-->
-<!--<p>Find me in app/views/users/index.html.erb</p>-->
-
 <div class="container px-5 px-sm-0">
   <div class="row">
     <!--画面左側-->
     <div class="col-md-3">
 
-      <%= render 'books/user_info', user: @user %>
+      <%= render 'books/user_info', user: current_user %>
       <%= render 'books/new_book', book: @book %>
 
     </div>
@@ -27,7 +24,7 @@
             <tr>
               <td><%= image_tag user.get_profile_image(50,50) %></td>
               <td><%= user.name %></td>
-              <td><%= link_to "show", user_path(user) %></td>
+              <td><%= link_to "Show", user_path(user) %></td>
             </tr>
           <% end %>
         </tbody>
