--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,3 @@
-<!--<h1>Users#show</h1>-->
-<!--<p>Find me in app/views/users/show.html.erb</p>-->
-
 <div class="container px-5 px-sm-0">
   <div class="row">
     <!--画面左側-->
@@ -26,7 +23,7 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= image_tag book.user.get_profile_image(50,50) %></td>
+              <td><%=link_to image_tag(book.user.get_profile_image(50,50)), user_path(book.user) %></td>
               <td><%=link_to book.title, book_path(book) %></td>
               <td><%= book.body %></td>
             </tr>
