--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="Row">
-    <div clss="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
       <h1>
         Welcom to<i class="fas fa-book"></i><strong>Bookers!!</strong>
       </h1>
